# youaskm3

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  SPEC.md  eslint.config.mjs  package-lock.json  package.json  rust-toolchain.toml  tsconfig.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  capability_request.yml
.github/workflows/: ci.yml  index.yml  pages.yml
app/components/: browser-runtime.test.ts  browser-runtime.ts  federation-registry-contract.test.ts  index.test.ts  index.ts  mcp-tools-contract.test.ts  provider-config.test.ts  provider-config.ts
app/pwa/: manifest.webmanifest
app/site/: author-instance.json  build-manifest.json  components.js  index.html  manifest.webmanifest  provider-config.json  runtime.js  search-index.json  sw.js  sync-state.json
contracts/: federation-instances.example.json  federation-instances.schema.json  mcp-tools.json
crates/youaskm3-core/: Cargo.toml
crates/youaskm3-ingest/: Cargo.toml
crates/youaskm3-mcp/: Cargo.toml
crates/youaskm3-search/: Cargo.toml
docs/: federation-index-generation.md  federation-registry.md  knowledge-index-generation.md
knowledge/: index.md
scripts/: build.sh  check-coverage.sh  federation-index-smoke.sh  generate-federation-index.rb  generate-site-artifacts.rb  lint.sh  m3-add-smoke.sh  m3-build-smoke.sh  m3-init-smoke.sh  m3-init.sh  m3-sync-smoke.sh  m3-sync.sh  m3.sh  pwa-shell-smoke.sh  smoke.sh  test.sh
tools/pdf2m3/: README.md  pdf2m3.sh
tools/url2m3/: README.md  (+1 more)
(+11 files in other folders)
