[workspace]
members = [
  "crates/youaskm3-core",
  "crates/youaskm3-ingest",
  "crates/youaskm3-search",
  "crates/youaskm3-mcp",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/enricopiovesan/youaskm3"
rust-version = "1.94"
version = "0.1.0"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
